<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/eventName"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/eventDesc"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:layout_below="@+id/eventName"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventDesc"
        android:layout_centerHorizontal="true"
        android:id="@+id/eventOrg"
        android:text="@string/event_organiser"
        android:layout_alignParentEnd="@id/eventDesc" />

</RelativeLayout>